--- a/elk/docker-compose.yml
+++ b/elk/docker-compose.yml
@@ -47,6 +47,23 @@ services:
     depends_on:
       - elasticsearch
 
+  jaeger:
+    image: jaegertracing/all-in-one:1.55.0
+    container_name: jaeger_springboot
+    ports:
+      - "16686:16686"
+      - "4317:4317"
+    environment:
+      COLLECTOR_OTLP_ENABLED: true
+      SPAN_STORAGE_TYPE: elasticsearch
+      ES_SERVER_URLS: http://elasticsearch:9200
+      ES_TAGS_AS_FIELDS_ALL: true
+    depends_on:
+      - elasticsearch
+    networks:
+      - elastic
+
+
 networks:
   elastic:
     driver: bridge
