--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,3 +13,19 @@ services:
       - "5672:5672"
       - "15672:15672"
     container_name: rabbitmq
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    restart: unless-stopped
+    volumes:
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
